fix: Modify alignments

--- a/p5-mern-app/frontend/src/components/BusinessCard.css
+++ b/p5-mern-app/frontend/src/components/BusinessCard.css
@@ -1,13 +1,15 @@
 .BusinessCard-container {
-  margin: 20px 100px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  margin: 30px;
   justify-content: space-evenly;
+  width: fit-content;
+  height: fit-content;
   padding: 30px;
+  gap: 30px;
   border-radius: 10px;
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2), 0px 6px 20px 0px rgba(0, 0, 0, 0.19);
-  gap: 20px;
 }
 
 .BusinessCard-container img{
@@ -19,7 +21,10 @@
   display: flex;
   flex-direction: column;
   max-width: 200px;
+  max-height: 200px;
+  overflow: hidden;
 }
+
 
 .BusinessName-container {
   display: flex;
@@ -31,7 +36,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  min-width: 250px;
+  min-width: 200px;
 }
 
 .BusinessName{
